--- a/sched-ease/package.json
+++ b/sched-ease/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.1",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.8.2",
     "date-fns": "^4.1.0",
     "lucide": "^0.475.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.0.6",
     "zustand": "^5.0.3"
   },
@@ -24,6 +27,7 @@
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
