--- a/sched-ease/package.json
+++ b/sched-ease/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.8.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.5.0",
     "lucide": "^0.475.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
